# james

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  system.md  test_filesystem_smoke.py  test_memory_smoke.py  test_qdrant_smoke.py  test_registry_smoke.py  test_sandbox_smoke.py
.claude/: settings.local.json
backend/: main.py
backend/agents/: __init__.py  delegator.py  observer.py
backend/evolution/: __init__.py  adaptation_strategies.py  behavioral_patterns.py  evolution_manager.py  knowledge_distillation.py  learning_engine.py
backend/filesystem/: __init__.py  directory_manager.py  exceptions.py  file_manager.py  version_manager.py
backend/graph/: __init__.py  master_graph.py  state.py
backend/memory/: __init__.py  cleanup_strategies.py  memory_manager.py  memory_types.py
backend/models/: __init__.py  api.py  core.py
backend/observability/: __init__.py  anomaly_detector.py  langsmith_tracer.py  metrics_collector.py  trace_analyzer.py
backend/protocol/: __init__.py  a2a_auth.py  a2a_handlers.py  a2a_models.py
backend/queue/: __init__.py  exceptions.py  message_queue.py
backend/registry/: __init__.py  subagent_registry.py
backend/sandbox/: Dockerfile.sandbox  README.md  __init__.py  exceptions.py  sandbox.py
backend/subagents/: __init__.py  base.py  builder_agent.py  external_input_agent.py  (+2 more)
components/: ChatInterface.tsx  MemoryPanel.tsx  StatusPanel.tsx
examples/: a2a_protocol_demo.py  behavioral_patterns_demo.py  delegator_demo.py  evolution_demo.py  filesystem_demo.py  knowledge_distillation_demo.py  master_graph_demo.py  memory_demo.py  message_queue_demo.py  observability_demo.py  observer_demo.py  qdrant_demo.py  sandbox_demo.py  seed_tools_demo.py  subagent_registry_demo.py
frontend/: COPILOT_INTEGRATION.md  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
james/: __init__.py  main.py
pages/: _app.tsx  index.tsx
styles/: globals.css
tests/: test_a2a_protocol.py  test_circuit_breaker.py  test_delegator.py  test_evolution_system.py  test_filesystem.py  test_llm_error_handler.py  test_main.py  test_master_graph.py  test_memory_manager.py  test_message_queue.py  test_models.py  test_observability.py  test_observer.py  test_qdrant_integration.py  test_sandbox.py  test_security_error_handler.py  test_seed_subagents.py  test_seed_tools.py  test_subagent_registry.py  test_system_initialization.py
(+49 files in other folders)
