[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conscious-agent-system"
version = "0.1.0"
description = "A conscious AI agent system with stream-of-consciousness capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.40",
    "langsmith>=0.0.70",
    "openai>=1.6.0",
    "qdrant-client>=1.7.0",
    "mem0ai>=0.0.10",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "asyncio-mqtt>=0.13.0",
    "docker>=7.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=backend --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true